RWA-959 Link account loading spacing amends, fixed

--- a/app/reflection-main.css
+++ b/app/reflection-main.css
@@ -4211,7 +4211,7 @@ textarea, .global-header .link-open-search {
 /* line 823, sass/templates/_account-access.scss */
 .connect-account-content input[type="submit"].ref-button--is-loading,
 .connect-account-content button.ref-button--is-loading {
-  margin-top: 5.6rem;
+  margin-top: 14rem;
   margin-bottom: 0.7rem;
   -webkit-transition: margin-top 0.3s;
           transition: margin-top 0.3s;
@@ -4220,14 +4220,14 @@ textarea, .global-header .link-open-search {
   /* line 823, sass/templates/_account-access.scss */
   .connect-account-content input[type="submit"].ref-button--is-loading,
   .connect-account-content button.ref-button--is-loading {
-    margin-top: 4.6rem;
+    margin-top: 13rem;
   }
 }
 @media (min-width: 1600px) {
   /* line 823, sass/templates/_account-access.scss */
   .connect-account-content input[type="submit"].ref-button--is-loading,
   .connect-account-content button.ref-button--is-loading {
-    margin-top: 7.6rem;
+    margin-top: 13rem;
   }
 }
 
@@ -8104,7 +8104,7 @@ table.table-linked-accounts.table-data td.update-linked-accounts-container .ref-
 /* line 307, sass/templates/_linked-accounts.scss */
 .form-submitted-loading .ref-button--is-loading.js-rotate-content,
 .form-submitted-loading .ref-button--success.js-rotate-content {
-  margin-top: 6rem;
+  margin-top: 11rem;
   -webkit-transform: rotateX(0deg);
           transform: rotateX(0deg);
   -webkit-transition: -webkit-transform 0.15s 0.15s, background-color 0.3s, margin-top 0.3s;
@@ -8115,7 +8115,7 @@ table.table-linked-accounts.table-data td.update-linked-accounts-container .ref-
   /* line 307, sass/templates/_linked-accounts.scss */
   .form-submitted-loading .ref-button--is-loading.js-rotate-content,
   .form-submitted-loading .ref-button--success.js-rotate-content {
-    margin-top: 5rem;
+    margin-top: 11rem;
   }
 }
 
