--- a/app/sass/templates/_account-access.scss
+++ b/app/sass/templates/_account-access.scss
@@ -822,14 +822,14 @@
 	position: relative;
 	input[type="submit"].ref-button--is-loading,
 	button.ref-button--is-loading {
-		margin-top: 5.6rem;
+		margin-top: 14rem;
 		margin-bottom: 0.7rem;
 		transition: margin-top 0.3s;
 		@include breakpoint($tablet) {
-			margin-top: 4.6rem;
+			margin-top: 13rem;
 		}
 		@include breakpoint($desktop-wide) {
-			margin-top: 7.6rem;
+			margin-top: 13rem;
 		}
 	}
 }
