--- a/app/sass/templates/_linked-accounts.scss
+++ b/app/sass/templates/_linked-accounts.scss
@@ -306,12 +306,12 @@ table.table-linked-accounts {
 }
 .form-submitted-loading .ref-button--is-loading.js-rotate-content,
 .form-submitted-loading .ref-button--success.js-rotate-content {
-	margin-top: 6rem;
+	margin-top: 11rem;
 	transform: rotateX(0deg);
 	transition: transform 0.15s 0.15s, background-color $base-transition-speed-on, margin-top 0.3s;
 	visibility: visible;
 	@include breakpoint($tablet) {
-		margin-top: 5rem;
+		margin-top: 11rem;
 	}
 }
 .form-submitted-loading.ie9 .js-rotate-content:not(.maintain-after-submit),
